lib_LIBRARIES = libkwd.a
include_HEADERS = KWD.h Resource.h Creature.h Object.h Terrain.h CreatureSpell.h Player.h Thing.h Door.h KeeperSpell.h Trap.h Effect.h Light.h Room.h Trigger.h EffectElement.h Map.h Variable.h
libkwd_a_SOURCES = KWD.cpp File.cpp Thing.cpp Room.cpp Effect.cpp EffectElement.cpp Creature.cpp Terrain.cpp KeeperSpell.cpp Object.cpp
